z-index fix

--- a/frontend/src/styles/Popup.scss
+++ b/frontend/src/styles/Popup.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 
   display: flex;
   align-items: center;
